adding get preview message route
