# docs/swagger.json
@@ -15,7 +15,7 @@
     },
     "basePath": "/",
     "paths": {
-        "/login": {
+        "/auth/login": {
             "post": {
                 "description": "Login API",
                 "consumes": [
@@ -51,13 +51,8 @@
                 }
             }
         },
-        "/logout": {
+        "/auth/logout": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Logout API",
                 "consumes": [
                     "application/json"
@@ -81,20 +76,46 @@
                     }
                 }
             }
+        },
+        "/message/preview": {
+            "get": {
+                "description": "Get All Preview Message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Message"
+                ],
+                "summary": "Get All Preview Message",
+                "responses": {}
+            }
         }
     },
     "definitions": {
         "controller.LoginBody": {
             "type": "object",
             "required": [
+                "host",
                 "password",
+                "port",
                 "username"
             ],
             "properties": {
+                "host": {
+                    "type": "string",
+                    "example": "outlook.office365.com"
+                },
                 "password": {
                     "type": "string",
                     "format": "string",
-                    "example": "password123"
+                    "example": "password1122"
+                },
+                "port": {
+                    "type": "string",
+                    "example": "993"
                 },
                 "username": {
                     "type": "string",
@@ -102,14 +123,6 @@
                     "example": "test@test.com"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "ApiKeyAuth": {
-            "description": "Bearer token authorization",
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
         }
     }
 }
