# src/controller/auth.controller.go
@@ -1,6 +1,11 @@
 package controller
 
-import "github.com/gofiber/fiber/v2"
+import (
+	"fmt"
+
+	"github.com/gofiber/fiber/v2"
+	imapwrapper "github.com/iambpn/go-email/pkg/imap_wrapper"
+)
 
 func AuthRouter(router fiber.Router) {
 	router.Post("/login", login)
@@ -9,8 +14,12 @@ func AuthRouter(router fiber.Router) {
 
 type LoginBody struct {
 	Username string `json:"username" example:"test@test.com" validate:"required" format:"string"`
-	Password string `json:"password" example:"password123" validate:"required" format:"string"`
+	Password string `json:"password" example:"password1122" validate:"required" format:"string"`
+	Host     string `json:"host" example:"outlook.office365.com" validate:"required"`
+	Port     string `json:"port" example:"993" validate:"required"`
 }
+
+var iw imapwrapper.ImapWrapper
 
 // @summary		Login
 // @Description	Login API
@@ -20,9 +29,31 @@ type LoginBody struct {
 // @Param			RequestBody	body	LoginBody	false	"Login Body"
 // @Success		200
 // @Failure		500,404
-// @Router			/login [post]
+// @Router			/auth/login [post]
 func login(c *fiber.Ctx) error {
-	return nil
+	loginBody := LoginBody{}
+	err := c.BodyParser(&loginBody)
+
+	if err != nil {
+		return err
+	}
+
+	iw = imapwrapper.ImapWrapper{
+		Host:     loginBody.Host,
+		Port:     loginBody.Port,
+		Username: loginBody.Username,
+		Password: loginBody.Password,
+	}
+
+	err = iw.Connect()
+
+	if err != nil {
+		return err
+	}
+
+	return c.JSON(fiber.Map{
+		"message": "Login Successful",
+	})
 }
 
 // @Summary		Logout
@@ -32,8 +63,18 @@ func login(c *fiber.Ctx) error {
 // @Produce		json
 // @Success		200
 // @Failure		500,403
-// @Router			/logout [get]
-// @Security		ApiKeyAuth
+// @Router			/auth/logout [get]
+// //@Security		ApiKeyAuth
 func logout(c *fiber.Ctx) error {
-	return nil
+	if iw.Host != "" {
+		fmt.Print(iw)
+		iw.Logout()
+		return c.JSON(fiber.Map{
+			"message": "Logout Successful",
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"message": "Unable to logout. Imap Wrapper is not initialized.",
+	})
 }
